# jpegxl

./: README.md  decode.go  decode_dynamic.go  decode_test.go  exif.go  exif_test.go  go.mod  go.sum  jpegxl.go  jpegxl_dynamic.go  jpegxl_test.go  jpegxl_wasm2go.go  jpegxl_wazero.go  orientation_test.go  purego_darwin.go  purego_other.go  purego_unix.go  purego_windows.go
.github/workflows/: test.yml
lib/: Cargo.toml  Makefile  Makefile.decode  Makefile.encode  Makefile.wasi  decode.c  encode.c  jxl.c  jxl.wasm  lib.rs
testdata/: or6_ll.jxl  test16.jxl  test8.jxl  test_exif.jxl
