[package]
name = "jpegxl-shim"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
jxl-oxide = { version = "0.12.6", default-features = false }
zune-jpegxl = { version = "0.5.2", default-features = false }
zune-core = { version = "0.5", default-features = false }

[profile.release]
opt-level = 3
lto = true
panic = "abort"
strip = true
